--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/FagnerOnesko/nodeJs-overleaf#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "hbs": "^4.0.6",
     "mongodb": "^3.3.3",
     "nodemon": "^1.19.4"
